--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="nav-container">
   
 
-   <div> <img class= "logo"src="/assets/logo.jpg" alt="logo" max-width="100px" height="50px" style="float: left; padding: 0;"> </div>
+   <div> <img class= "logo"src="assets/logo.jpg" alt="logo" max-width="100px" height="50px" style="float: left; padding: 0;"> </div>
 
     <div> <a href='#about' > About  </a></div> 
     <div>  <a href='#contact'> Contact</a> </div>
