--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="nav-container">
   
 
-   <div> <img class= "logo"src="assets/logo.jpg" alt="logo" max-width="100px" height="50px" style="float: left; padding: 0;"> </div>
+   <div> <img class= "logo"src="../assets/logo.jpg" alt="logo" max-width="100px" height="50px" style="float: left; padding: 0;"> </div>
 
     <div> <a href='#about' > About  </a></div> 
     <div>  <a href='#contact'> Contact</a> </div>
@@ -59,7 +59,7 @@
 
           <li><i class="fas fa-bus-alt" style=" font-size: 36px; color: hotpink;"></i>Tours and Travel Management</li><br>
       </ul>
-      <!--<img src="/assets/bg1.jpg" alt="laptop" height="500px" width="420px" > -->
+      <!--<img src="../assets/bg1.jpg" alt="laptop" height="500px" width="420px" > -->
       </div>
     </div>
      
@@ -94,11 +94,11 @@
 <h3 style="text-align: center;"> Our Partners </h3>
 
 <div class="partners-container">
-<div><img src="/assets/saf-logo.jpg" alt="Safaricom" height="100px" width="100px"></div>
-<div><img src="/assets/Cisco_logo_PNG2 (1).png" alt="Telkom" height="100px" width="100px"></div>
-<div><img src="/assets/Airtel-Logo.png" alt="Airtel" height="100px" width="100px"></div>
-<div><img src="/assets/tel-logo.png" alt="Cisco" height="100px" width="100px"></div>
-<div><img src="/assets/HP_(7).png" alt="HP" height="100px" width="100px"></div>
+<div><img src="../assets/saf-logo.jpg" alt="Safaricom" height="100px" width="100px"></div>
+<div><img src="../assets/Cisco_logo_PNG2 (1).png" alt="Telkom" height="100px" width="100px"></div>
+<div><img src="../assets/Airtel-Logo.png" alt="Airtel" height="100px" width="100px"></div>
+<div><img src="../assets/tel-logo.png" alt="Cisco" height="100px" width="100px"></div>
+<div><img src="../assets/HP_(7).png" alt="HP" height="100px" width="100px"></div>
 
  </div>
 
